Add tags to operators / params